--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "neowg"
-version = "1.1.0"
+version = "1.1.1"
 description = "Library for working with wireguard configs."
 authors = ["NeoTheBestDeveloper <neothebestmain@protonmail.com>"]
 readme = "README.md"
@@ -8,6 +8,8 @@ license = "GPLv3"
 classifiers = [
     "Programming Language :: Python :: 3",
     'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
     'Operating System :: POSIX :: Linux',
     'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
 ]
